completed ikirori organiser that work well

--- a/app/src/main/res/layout/paid_tickets.xml
+++ b/app/src/main/res/layout/paid_tickets.xml
@@ -20,6 +20,19 @@
         app:titleTextAppearance="@style/Ikirori_TextAppearance_Toolbar"
         app:titleTextColor="@color/colorWhite" />
 
+    <ScrollView
+        android:id="@+id/scrollView4"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/paid_toolbar_event">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/scrollview_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
         android:layout_width="wrap_content"
@@ -35,118 +48,140 @@
         app:layout_constraintGuide_end="24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-      android:id="@+id/floatingActionButtonPaidTickets"
-      android:layout_width="wrap_content"
-      android:layout_height="0dp"
+        android:id="@+id/floatingActionButtonPaidTickets"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
 
-      android:layout_marginTop="8dp"
-      android:layout_marginEnd="8dp"
-      android:clickable="true"
-      app:srcCompat="@drawable/ic_done_white_24dp"
-      app:backgroundTint="@color/colorPrimary"
-      app:layout_constraintEnd_toStartOf="@+id/guideline7"
-      app:layout_constraintTop_toBottomOf="@+id/paid_quantity_label"/>
+        android:layout_marginBottom="24dp"
+        android:clickable="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:srcCompat="@drawable/ic_done_white_24dp" />
+
+            <TextView
+                android:id="@+id/ticket_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="Ticket name"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/guideline6"
+                app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/paid_ticket_name"
+        android:id="@+id/description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat_regular"
-        android:text="Ticket name"
+        android:text="Description"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toBottomOf="@+id/paid_toolbar_event" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/paid_ticket_name_label"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:boxBackgroundMode="outline"
-        app:boxCornerRadiusBottomEnd="4dp"
-        app:boxCornerRadiusBottomStart="4dp"
-        app:boxCornerRadiusTopEnd="4dp"
-        app:boxCornerRadiusTopStart="4dp"
-        app:boxStrokeColor="@color/colorPrimary"
-        app:layout_constraintEnd_toStartOf="@+id/guideline7"
-        app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toBottomOf="@+id/paid_ticket_name">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_regular"
-            android:textStyle="bold" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/ticket_name_label" />
 
     <TextView
-      android:id="@+id/paid_description"
-      android:textStyle="bold"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
-      android:fontFamily="@font/montserrat_regular"
-      android:text="Quantity"
-      android:textColor="@color/colorPrimary"
-      android:textSize="18sp"
-      app:layout_constraintStart_toStartOf="@+id/guideline6"
-      app:layout_constraintTop_toBottomOf="@+id/paid_ticket_name_label"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/paid_description_label"
+        android:id="@+id/quantity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:boxBackgroundMode="outline"
-        app:boxCornerRadiusBottomEnd="4dp"
-        app:boxCornerRadiusBottomStart="4dp"
-        app:boxCornerRadiusTopEnd="4dp"
-        app:boxCornerRadiusTopStart="4dp"
-        app:boxStrokeColor="@color/colorPrimary"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/montserrat_regular"
+        android:text="Quantity"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/guideline6"
+        app:layout_constraintTop_toBottomOf="@+id/description_label" />
+
+    <EditText
+        android:id="@+id/ticket_name_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:hint="Saisir un nom court et distinctif"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toBottomOf="@+id/paid_description">
+        app:layout_constraintTop_toBottomOf="@+id/ticket_name" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_regular"
-            android:textStyle="bold" />
-    </com.google.android.material.textfield.TextInputLayout>
+    <EditText
+        android:id="@+id/description_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Détails facultatifs"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintStart_toStartOf="@+id/guideline6"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
+
+    <EditText
+        android:id="@+id/quantity_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="0"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintStart_toStartOf="@+id/guideline6"
+        app:layout_constraintTop_toBottomOf="@+id/quantity" />
 
     <TextView
-      android:id="@+id/paid_quantity"
-      android:textStyle="bold"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
-      android:fontFamily="@font/montserrat_regular"
-      android:text="Price"
-      android:textColor="@color/colorPrimary"
-      android:textSize="18sp"
-      app:layout_constraintStart_toStartOf="@+id/guideline6"
-      app:layout_constraintTop_toBottomOf="@+id/paid_description_label"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/paid_quantity_label"
-        android:layout_width="0dp"
+        android:id="@+id/price"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:boxBackgroundMode="outline"
-        app:boxCornerRadiusBottomEnd="4dp"
-        app:boxCornerRadiusBottomStart="4dp"
-        app:boxCornerRadiusTopEnd="4dp"
-        app:boxCornerRadiusTopStart="4dp"
-        app:boxStrokeColor="@color/colorPrimary"
-        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        android:layout_marginTop="16dp"
+        android:text="price"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
-        app:layout_constraintTop_toBottomOf="@+id/paid_quantity">
+        app:layout_constraintTop_toBottomOf="@+id/quantity_label" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_regular"
-            android:textStyle="bold" />
-    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Frais"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintTop_toTopOf="@+id/price" />
+
+            <EditText
+                android:id="@+id/price_label"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:cursorVisible="true"
+                android:ems="10"
+                android:inputType="number"
+                app:layout_constraintStart_toEndOf="@+id/fbu_textview"
+                app:layout_constraintTop_toBottomOf="@+id/price" />
+
+    <TextView
+        android:id="@+id/fbu_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="FBU"
+        app:layout_constraintBottom_toBottomOf="@+id/price_label"
+        app:layout_constraintStart_toStartOf="@+id/guideline6"
+        app:layout_constraintTop_toTopOf="@+id/price_label" />
+
+            <Spinner
+                android:id="@+id/tarif"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@+id/guideline7"
+                app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
